# ESP32_Embedded_learning

./: .gitignore  README.md
01_hello_world/: CMakeLists.txt
01_hello_world/common/input_iot/: input_iot.c  input_iot.h
02_blink/: CMakeLists.txt
02_blink/common/input_iot/: input_iot.c  input_iot.h
02_blink/main/: CMakeLists.txt  app_main.c
03_http_request/main/: app_main.c
04_station/: CMakeLists.txt
04_station/common/dht11/: CMakeLists.txt  dht11.c
04_station/common/http_server_app/: CMakeLists.txt  http_server_app.c  http_server_app.h
04_station/html/: index.html
04_station/main/: app_main.c  component.mk
05_ssl_mutual_auth/: CMakeLists.txt  client.key  flash_contents1.txt  partitions.csv
05_ssl_mutual_auth/html/: index.html
05_ssl_mutual_auth/main/: CMakeLists.txt  app_config.c  app_config.h  app_http_server.c  app_http_server.h  app_main.c  app_mqtt.c  app_mqtt.h  app_nvs.c  app_nvs.h  app_ota.c  app_ota.h  client.crt  client.csr  component.mk  partitions.csv
99_Knowledge/Lesson/: 01_ESP-IDF_Introduction.md  04_Wifi_Station_HTTP_Server_basic.md  05_Project_Web_server_iot.md  06_Wifi_Access_point_and_Smart_config.md  07_MQTT_Protocol.md  07_MQTT__Protocol.md  08_OTA.md  09_ESP32_WiFi_Provisioning_MQTT_OTA_Project.md  10_ESP32_Encryption.md
Knowledge/Lesson/: 01_ESP-IDF_Introduction.md  02_FreeRTOS_EventGroup_GPIO_Interupt_and_SW_Timer.md  03_Button_Event_Handling.md  04_Wifi_Station_HTTP_Server_basic.md
blink/main/: app_main.c
hello_world/main/: CMakeLists.txt  hello_world_main.c
uart_events/main/: uart_events_example_main.c
(+11 files in other folders)
